# CryptixOS

./: .gitignore  LICENSE  Makefile  README.md  bootstrap.yml  generate_symbols.sh  limine.cfg  limine.conf  meson.build
BaseFiles/: init
CrossFiles/: kernel-target-x86_64.cross-file  target-x86_64-cryptix.cross-file
Kernel/: Common.hpp  KernelStart.cpp  linker.aarch64.ld  linker.x86_64.ld  meson.build
Kernel/ACPI/: ACPI.cpp  ACPI.hpp  MADT.cpp  MADT.hpp
Kernel/Arch/: Arch.hpp
Kernel/Arch/Interrupts/: InterruptHandler.hpp  InterruptManager.hpp
Kernel/Arch/aarch64/: Arch.cpp  MMIO.hpp  VMM.cpp  meson.build
Kernel/Arch/aarch64/Drivers/: Serial.cpp
Kernel/Arch/x86_64/: Arch.cpp  CMOS.cpp  CMOS.hpp  CPU.cpp  CPU.hpp  CPUID.hpp  GDT.cpp  GDT.hpp  IDT.cpp  IDT.hpp  IO.hpp  InterruptManager.cpp  Types.hpp  VMM.cpp  interrupts.x86_64.S  meson.build
Kernel/Arch/x86_64/Drivers/: IoApic.cpp  IoApic.hpp  PIC.cpp  PIC.hpp  Serial.cpp
Kernel/Arch/x86_64/Drivers/Timers/: Lapic.cpp  Lapic.hpp  PIT.cpp  PIT.hpp  RTC.cpp  RTC.hpp
Kernel/Drivers/: Serial.hpp  Terminal.cpp  Terminal.hpp
Kernel/Memory/: KernelHeap.cpp  KernelHeap.hpp  PhysicalMemoryManager.cpp  PhysicalMemoryManager.hpp  SlabAllocator.hpp  VirtualMemoryManager.cpp  VirtualMemoryManager.hpp
Kernel/Scheduler/: Process.hpp  Scheduler.cpp  Scheduler.hpp  Thread.cpp  Thread.hpp
Kernel/Utility/: Bitmap.hpp  BootInfo.cpp  BootInfo.hpp  ELFLoader.cpp  ELFLoader.hpp  Logger.cpp  Logger.hpp  Math.hpp  Stacktrace.cpp  Stacktrace.hpp  Types.hpp
Kernel/Utility/KLibC/: assert.h  errno.cpp  errno.h  features.h  meson.build  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  wchar.h
Kernel/Utility/KLibC++/: cassert  cerrno  cmath  cstdio  cstring  cwchar  deque  format  icxxabi.cpp  memory  meson.build  mutex  stdexcept  string  system_error  vector
subprojects/: frozen.wrap  libstdcxx_headers.wrap  limine.wrap
subprojects/packagefiles/: limine.tar  veque.tar
